@@ -5,6 +5,10 @@ Changes since 2.2.2
    the standard ncurses layout.  Use the --terminfo=layout configure
    option to specify a non-standard layout (hpux11, osf1r5, uwin,
    aix4, default).  This incompatibity was pointed out by River Tarnell.
+2. src/slparse.c: complicated lvalue expressions were not being properly
+   parsed.
+
+{{{ Previous Versions
 
 Changes since 2.2.1
 1. src/slsmg.c: Call SLutf8_enable if UTF8 mode has not been setup.
@@ -25,8 +29,6 @@ Changes since 2.2.1
    range array as an index.
 10. doc/tm/rtl/lists.tm: Documented the optional argument to the
     list_to_array function (Manfred Hanke).
-
-{{{ Previous Versions
 
 Changes since 2.2.0
 1. modules/socket-module.c: glibc-2.8 removed the h_addr macro.
